# snake-game-fork

./: .gitignore  README.md  main.py  models.py  requirements.txt
.github/workflows/: backend-build-and-push.yaml  build-and-deploy.yaml  frontend-build-and-deploy.yaml
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  global_variables.py  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/boot/: axios.js
frontend/src/components/: Alert.vue  Score.vue  TextBox.vue
frontend/src/services/: ScoreService.js
instance/: games.db
static/: snake.html
